# nero_drone

./: CMakeLists.txt  package.xml
config/: ekf.yaml
launch/: bebop_fusion.launch.py  display_bebop.launch.py  hello_launch.py
nero_drone/: __init__.py  apriltag.py  compensator.py  demo_takeoff_land.py  hello_py.py  land.py  parameters.py  takeoff.py
others/: bebop2.rviz  cInverseDynamicController_Compensador.m  mInit.m
src/: apriltag_node.cpp  beboptag.cpp  hello_cpp.cpp  parameters.cpp  tf_cam.cpp  tf_tag_bebop.cpp
urdf/: bebop2.urdf
